# cudaNeuralRender

./: .gitmodules  CMakeLists.txt  Makefile  model.h5  readme.txt  volumeRender.cpp  volumeRender_kernel.cu
neuralGeometries/: car_1.h5.ppm  plane_1.h5.ppm  plane_2.h5.ppm
src/: CMakeLists.txt  main.cpp  neuralNetwork.cpp  neuralNetwork.cu  neuralNetwork.hh  simpleInfer.cpp  volumeRender.cpp  volumeRender_kernel.cu
src/layers/: denseLayer.cu  denseLayer.hh  layer.hh
src/neuralUtils/: image.cu  image.hh  matrix.cu  matrix.hh
